--- a/hello-java/Containerfile
+++ b/hello-java/Containerfile
@@ -25,7 +25,8 @@ RUN   chown -R 0 /opt/app-root && \
 
 EXPOSE 8080
 
-USER  wildfly
+#USER  wildfly
+USER 1001
 
 # Run the fat JAR
 CMD   /opt/app-root/bin/run-app.sh
