--- a/php-hello-dockerfile/Containerfile
+++ b/php-hello-dockerfile/Containerfile
@@ -10,6 +10,10 @@ RUN sed -i 's/Listen 80/Listen 8080/' /etc/httpd/conf/httpd.conf \
   && mkdir /run/php-fpm \
   && chgrp -R 0 /var/log/httpd /var/run/httpd /run/php-fpm \
   && chmod -R g=u /var/log/httpd /var/run/httpd /run/php-fpm
+
+COPY script.sh /root
+RUN  chgrp 0 script.sh
+RUN  chmod g+x script.sh
   
 EXPOSE 8080
 
