--- a/php-hello-dockerfile/Dockerfile
+++ b/php-hello-dockerfile/Dockerfile
@@ -1,7 +1,7 @@
 FROM registry.access.redhat.com/ubi8/ubi
 
 RUN yum --disableplugin=subscription-manager -y module enable php:7.2 \
-  && yum --disableplugin=subscription-manager -y install httpd php \
+  && yum --disableplugin=subscription-manager -y install httpd php curl bind-utils \
   && yum --disableplugin=subscription-manager clean all
 
 ADD index.php /var/www/html
