--- a/node/package.json
+++ b/node/package.json
@@ -7,5 +7,8 @@
     "sync-request": "6.1.0",
     "nodemailer": "6.7.3",
     "request": "2.81.0"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
